--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "client_id": "993320246037450823",
+    "client_id": "client_id",
     "default_prefix":"_",
     "TOKEN":"token",
     "urlDB":"linkDB"
