--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "node src/test.js"
+    "test": "node src/test.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "AnhHung",
