--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template_discord_bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Template for building discord bot",
   "main": "src/index.js",
   "scripts": {
     "test": "node src/test.js",
